--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h2>This is a test</h2>
-<form><input type="text" name="profileUrl">https://github.com/johnBartos</input>
+<form><input type="text" name="profileUrl" value="https://github.com/johnBartos"></input>
 </form>
