Added autofocus to input

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h2>This is a test</h2>
-<form><input type="text" name="profileUrl" value="https://github.com/johnBartos"></input>
+<form><input id="input" type="text" name="profileUrl" value="https://github.com/johnBartos"></input>
 </form>
+<script>document.getElementById("input").focus()</script>
