Added HTML content

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<h2>This is a test</h2>
-<form><input id="input" type="text" name="profileUrl" value="https://github.com/johnBartos"></input>
+<h2>Contributions Chiptune</h2>
+<div>Enter a profile name!</div>
+<form method="GET"><input id="input" type="text" name="profileUrl" value="https://github.com/johnBartos"></input>
 </form>
-<script>document.getElementById("input").focus()</script>
+<script>
+  document.getElementById("input").focus()
+  
+</script>
