--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <h2>Contributions Chiptune</h2>
 <div>Enter a profile name!</div>
-<form method="GET"><input id="input" type="text" name="profileUrl" value="https://github.com/johnBartos"></input>
+<form method="GET" onSubmit="play()"><input id="input" type="text" name="profileUrl" value="https://github.com/johnBartos"></input>
 </form>
 <script>
   document.getElementById("input").focus()
-  
+  play = function () {
+    alert("hi!")
+    
+  }
 </script>
