Add action on submit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <script>
   document.getElementById("input").focus()
   play = function () {
-    alert("hi!")
+    profileUrl = document.getElementById("input").value();
+    alert(profileUrl);
     
   }
 </script>
