--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script>
   document.getElementById("input").focus()
   play = function () {
-    profileUrl = document.getElementById("input").value();
+    profileUrl = document.getElementById("input").value;
     alert(profileUrl);
     
   }
