Added HTML tags

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html><head>
+</head><body>
 <h2>Contributions Chiptune</h2>
 <div>Enter a profile name!</div>
 <form method="GET" onSubmit="play()"><input id="input" type="text" name="profileUrl" value="johnBartos"></input>
@@ -11,3 +13,5 @@
     
   }
 </script>
+</body>
+</html>
