Put HTML tags on separate lines

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<html><head>
-</head><body>
+<html>
+<head>
+</head>
+<body>
 <h2>Contributions Chiptune</h2>
 <div>Enter a profile name!</div>
 <form method="GET" onSubmit="play()"><input id="input" type="text" name="profileUrl" value="johnBartos"></input>
